--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -37,6 +37,7 @@
               [hasUndo]="hasUndo"
               [hasRedo]="hasRedo"
               [graphs]="graphs"
+              [statusGraph]="statusGraph"
               [onUndoButtonClick]="handleUndoButtonClick"
               [onRedoButtonClick]="handleRedoButtonClick"
               [onZoomInButtonClick]="handleZoomInButtonClick"
@@ -46,6 +47,7 @@
               [onConfirmNameChange]="handleSaveAsToBrowser.bind(this)"
               [onNewButtonClick]="handleNewClick.bind(this)"
               [onRunButtonClick]="handleRunButtonClick"
+              [onStopButtonClick]="handleStopButtonClick"
               [onSwitchDirectionButtonClick]="handleSwitchDirectionButtonClick"
               [onCreateProjectButtonClick]="createProject"
               [showGraphSettingDialog]="showGraphSettingDialog.bind(this)"
