--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -108,74 +108,38 @@
     </div>
 
     <div class="tool-bar-right">
-        <div 
+        <d-select
             class="btn-group" 
-            style="display:inline-block"
-            dDropDown 
-            [isOpen]="isOpen" 
-            [trigger]="'manually'" 
-            [closeScope]="'blank'"
-            appendToBody
-            [appendToBodyDirections]="['centerDown', 'centerUp']"
-            (toggleEvent)="onToggle($event)"
-            (click)="toggleIsOpen()">
-            <a dDropDownToggle class="devui-dropdown-default devui-dropdown-origin">
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                {{'toolBar.project' | translate}}
-                <span class="icon-select-arrow"></span>
-                &nbsp;&nbsp;
-            </a>
-      
-            <ul dDropDownMenu class="devui-dropdown-menu devui-scrollbar" role="menu">
-                <li role="menuitem">
-                    <a class="devui-dropdown-item" id="createProject" (click)="showCreateProjectDialog(createProject)">
-                        {{'toolBar.newButton' | translate}}
-                    </a>
-                </li>
-                <li role="menuitem">
-                    <a class="devui-dropdown-item" id="openProject" (click)="showOpenProjectButtonDialog(openProject)">
-                        {{'toolBar.openProjectButton' | translate}}
-                    </a>
-                </li>
-                <li role="menuitem">
-                    <a class="devui-dropdown-item" id="save-as" (click)="saveAllProject()">
-                        {{'toolBar.saveAsButton' | translate}}
-                    </a>
-                </li>
-            </ul>
-        </div>
-        
-        <div 
-            class="btn-group" 
-            style="display:inline-block"
-            dDropDown 
-            [isOpen]="isOpen2" 
-            [trigger]="'manually'" 
-            [closeScope]="'blank'"
-            appendToBody
-            [appendToBodyDirections]="['centerDown', 'centerUp']"
-            (toggleEvent)="onToggle2($event)"
-            (click)="toggleIsOpen2()">
-            <a dDropDownToggle class="devui-dropdown-default devui-dropdown-origin">
-                {{'toolBar.flowunit' | translate}}
-                <span class="icon-select-arrow"></span>
-            </a>
-      
-            <ul dDropDownMenu class="devui-dropdown-menu devui-scrollbar" role="menu">
-                <li role="menuitem">
-                    <a class="devui-dropdown-item" id="new" (click)="showCreateFlowunitDialog(createFlowunit)">
-                        {{'toolBar.newFlowunitButton' | translate}}
-                    </a>
-                </li>
-                <li role="menuitem">
-                    <a class="devui-dropdown-item" id="refresh" (click)="refreshFlowunit()">
-                        {{'toolBar.refreshFlowunitButton' | translate}}
-                    </a>
-                </li>
-            </ul>
-        </div>
+            style="display:inline-block; width: 70px; margin-right: 4px"
+            [options]="options1"
+            [filterKey]="'specialContent'"
+            [(ngModel)]="currentOption1"
+            (ngModelChange)="handleProjectDropDown($event)">
+            <ng-template
+                let-option="option"
+                let-filterKey="filterKey">
+                {{ option.name }}
+            </ng-template>
+        </d-select>
 
-        <button id="open-graph-setting" (click)="showGraphSettingDialog(graphSetting)" class="tool-bar-button">
+        <d-select
+            class="btn-group" 
+            style="display:inline-block; width: 84px"
+            [options]="options2"
+            [filterKey]="'specialContent'"
+            [(ngModel)]="currentOption2"
+            (ngModelChange)="handleFlowunitDropDown($event)">
+            <ng-template
+                let-option="option"
+                let-filterKey="filterKey">
+                {{ option.name }}
+            </ng-template>
+        </d-select>
+
+        <button 
+            id="open-graph-setting" 
+            (click)="showGraphSettingDialog(graphSetting)" 
+            class="tool-bar-button">
             {{'toolBar.graphSettingButton' | translate}}
         </button>
     </div>
@@ -218,7 +182,7 @@
                 <d-form-label [required]="true">
                     {{'toolBar.setting.template' | translate}}
                 </d-form-label>
-                <d-form-control style="height:300px;">
+                <d-form-control style="height:300px">
                     <div style="width: 48%;display:inline-block">
                         <d-card class="card-container" *ngFor="let d of optionSolutionList[0]"
                             (click)="onClickCard(d, $event)" style="height:160px;margin:8px;border: 5px solid white;">
