UI: fix undo and blue frame and add shape

--- a/src/app/components/insert-panels/insert-panels.component.less
+++ b/src/app/components/insert-panels/insert-panels.component.less
@@ -54,7 +54,7 @@
 .tips-block {
     display   : grid;
     text-align: left;
-    width     : 240px;
+    max-width     : 240px;
     color     : white;
     height    : auto;
 }
