UI: fix remove graph

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -31,7 +31,7 @@
           (dragEnd)="handleGutterEnd($event, 'center')"
           (dragStart)="handleGutterStart($event)"
           gutterDblClickDuration="500">
-          <as-split-area [size]="centerSplitterSize">
+          <as-split-area [size]="centerSplitterSize" style="overflow:hidden">
             <app-tool-bar
               #toolBar
               [hasUndo]="hasUndo"
