--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,7 +1,7 @@
 <div
   class="graph-svg"
   #canvas
-  style="position: relative;width:100%"
+  style="position: relative;width:100%; z-index:0;"
   (dragover)="handleNodeShapeDragOver($event)"
   (drop)="handleNodeShapeDrop.call(this, $event)">
 </div>
