UI: limit project name nad port name

--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -131,6 +131,11 @@
         margin-left: 4px;
     }
 }
+.card-container ::ng-deep .devui-form-control-container{
+    display: flex; 
+    justify-content: space-between;  
+    align-items: flex-start;
+}
 
 d-card {
     cursor: pointer;
