--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -103,7 +103,7 @@
     <div class="tool-bar-mid">
         <span style="font-size:28px; font-weight:500;">
 
-            {{formDataCreateProject.name}}
+            {{formDataCreateProject.name.substring(0,31)}}
         </span>
     </div>
 
@@ -158,7 +158,7 @@
                 </d-form-label>
                 <d-form-control>
                     <div>
-                        <input dTextInput name="project_name" [(ngModel)]="formDataCreateProject.name" />
+                        <input dTextInput name="project_name" [(ngModel)]="formDataCreateProject.name" maxlength="31"/>
                     </div>
                 </d-form-control>
             </d-form-item>
@@ -182,7 +182,7 @@
                 <d-form-label [required]="true">
                     {{'toolBar.setting.template' | translate}}
                 </d-form-label>
-                <d-form-control style="height:300px">
+                <d-form-control class="card-container" style="height:300px;">
                     <div style="width: 48%;display:inline-block">
                         <d-card class="card-container" *ngFor="let d of optionSolutionList[0]"
                             (click)="onClickCard(d, $event)" style="height:160px;margin:8px;border: 5px solid white;">
@@ -423,10 +423,10 @@
                             <ng-template let-rowItem="rowItem" let-rowIndex="rowIndex">
                                 <tr dTableRow>
                                     <td dTableCell>
-                                        {{rowItem.port_name}}
+                                        {{rowItem.port_type}}
                                     </td>
                                     <td dTableCell>
-                                        {{rowItem.port_type}}
+                                        {{rowItem.port_name}}
                                     </td>
                                     <td dTableCell *ngIf="rowItem.data_type">
                                         {{rowItem.data_type}}
