--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -112,6 +112,8 @@
     .tool-bar-mid {
         display   : inline-block;
         text-align: center;
+        max-width : 400px;
+        height    : 44px;
     }
 
     .align-origin {
