--- a/src/app/components/management/management.component.less
+++ b/src/app/components/management/management.component.less
@@ -10,6 +10,40 @@
   position: absolute;
 }
 
+::ng-deep .ngx-json-viewer {
+  overflow: auto !important;
+}
+
+.title-fieldset {
+  font-size  : 16px;
+  font-weight: 600;
+  border     : none;
+  border-top : 1px solid #ADB0B8;
+  margin-top : 20px;
+}
+
+.title-fieldset .inner {
+  margin : 0 auto;
+  padding: 0 0.25rem
+}
+
+.tool-bar-button {
+  margin          : 8px 4px 0 4px;
+  padding         : 4px 12px 4px 12px;
+  color           : #252B3A;
+  letter-spacing  : 0;
+  text-align      : center;
+  line-height     : 18px;
+  background-color: #fff;
+  border          : 1px solid #ADB0B8;
+  border-radius   : 2px;
+}
+
+.app-ace-editor {
+  border    : 2px solid #f8f9fa;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
 .mb10 {
   margin-bottom: 10px;
 }
