--- a/src/app/components/management/management.component.html
+++ b/src/app/components/management/management.component.html
@@ -103,7 +103,13 @@
     <d-tabs [type]="'tabs'" [(activeTab)]="tab1acticeID">
       <d-tab id="tab1" [title]="'toolBar.apiDebug' | translate" >
         <ng-template dTabContent>
-          <div style="height:560px">
+          <div
+            style="height:560px">
+            <d-select
+              [placeholder]="'Template Structure'" 
+              (valueChange)="templateChange($event)"
+              [options]="optionsTemplate">
+            </d-select>
             <div style="display: inline-block;width:90%">
               <d-select 
                 style="display: inline-block;width:15%"
@@ -125,21 +131,14 @@
                 Send
               </button>
             </div>
-
             <fieldset class="title-fieldset">
               <legend class="inner">Request</legend>
             </fieldset>
-
             <div style= "width:100%;height:40px;display:flex; justify-content: space-between; align-items: center;">
               <div style="width:50%;display:inline-block">
                 <div
                   style="display:flex; align-items:center;justify-content: space-between;"
                   >
-                  <d-select
-                    [placeholder]="'Template Structure'" 
-                    (valueChange)="templateChange($event)"
-                    [options]="optionsTemplate">
-                  </d-select>
                   <d-radio-group
                     style="display:inline-block"
                     [name]="'optionContent'"
@@ -152,97 +151,26 @@
                 </div>
               </div>
               <div style="width:50%;display:inline-block">
-                <div style="width:140px;float:right">
-                  <div 
-                    *ngIf="choose === 'Body'"
-                    (click)="beautifyJson()"
-                    style="font-size: 18px; color:dodgerblue;display:inline-block;cursor: pointer">
-                    Beautify
-                  </div>
-                  
+                <div 
+                  *ngIf="choose === 'Body'"
+                  (click)="beautifyJson()"
+                  style="font-size: 18px; color:dodgerblue;cursor: pointer;float:right">
+                  Beautify
                 </div>
               </div>
             </div>
-
-            <div style= "width:100%;height:180px;">
-              <div 
-                *ngIf="choose === 'Header'"
-                style="height: 160px">
-                <d-data-table
-                  [dataSource]="dataHeaders"
-                  [scrollable]="true"
-                  [tableWidthConfig]="tableWidthConfigKeyValue"
-                >
-                  <thead dTableHead [checkable]="true">
-                    <tr dTableRow>
-                      <th dHeadCell style="text-align: center;">Key</th>
-                      <th dHeadCell style="text-align: center;">Value</th>
-                    </tr>
-                  </thead>
-                  <tbody dTableBody>
-                    <ng-template let-rowItem="rowItem" let-rowIndex="rowIndex" let-nestedIndex="nestedIndex">
-                      <tr 
-                        class="trheader"
-                        dTableRow 
-                        [ngClass]="{ 'table-row-selected': rowItem.$checked }"
-                      >
-                        <td dTableCell class="devui-checkable-cell">
-                          <d-checkbox
-                            [ngModelOptions]="{ standalone: true }"
-                            (ngModelChange)="onRowCheckChange($event, rowIndex, nestedIndex, rowItem)"
-                            [ngModel]="rowItem.ischecked"
-                          >
-                          </d-checkbox>
-                        </td>
-                        <td 
-                          dTableCell
-                          [editable]="true"
-                          [editableTip]="editableTip"
-                          [(editing)]="rowItem['nameEdit']"
-                          [rowItem]="rowItem"
-                          [field]="'key'"
-                          [beforeEditEnd]="beforeEditEnd"
-                          style="text-align: center;"
-                        >
-                          <span *ngIf="!rowItem['nameEdit']">{{ rowItem?.key }}</span>
-                          <div *ngIf="rowItem['nameEdit']" class="edit-padding-fix">
-                            <input class="devui-form-control" name="key" [(ngModel)]="rowItem.key" [attr.maxlength]="100" [attr.minlength]="3" />
-                          </div>
-                        </td>
-                        <td 
-                          dTableCell
-                          [editable]="true"
-                          [editableTip]="editableTip"
-                          [(editing)]="rowItem['nameEdit2']"
-                          [rowItem]="rowItem"
-                          [field]="'value'"
-                          [beforeEditEnd]="beforeEditEnd"
-                          style="text-align: center;"
-                        >
-                          <span *ngIf="!rowItem['nameEdit2']">{{ rowItem?.value }}</span>
-                          <div *ngIf="rowItem['nameEdit2']" class="edit-padding-fix">
-                            <input class="devui-form-control" name="value" [(ngModel)]="rowItem.value" [attr.maxlength]="100" [attr.minlength]="3" />
-                          </div>
-                        </td>
-                        
-                        <i 
-                          class="icon icon-close"
-                          style="position:fixed; right:40px; cursor:pointer"
-                          (click)="handleDelete(rowIndex)"
-                        >
-                        </i>
-                      </tr>
-                    </ng-template>
-                  </tbody>
-                </d-data-table>
-              </div>
-              <div 
-                *ngIf="choose === 'Body'"
-                style="height: 160px;width:100%;display:inline-block">
+            
+            <d-splitter 
+              style="height:480px" 
+              class="splitter-border" 
+              orientation="vertical" 
+              [disabledBarSize]="'2px'">
+              <d-splitter-pane size="250px" >
                 <ace
+                  *ngIf="choose === 'Body'"
                   class="app-ace-editor"
                   #editor
-                  style="height: 160px;"
+                  style="height: 80%;"
                   [config]="config"
                   [mode]="'dot'"
                   [value]="jsonSrc"
@@ -250,33 +178,93 @@
                   [theme]="'tomorrow'"
                 >
                 </ace>
-              </div>
-              
-              <!-- <div 
-                *ngIf="choose === 'Body'"
-                style="height: 160px;width:50%;display:inline-block">
-                <ngx-json-viewer 
-                  [json]="jsonSrcObj"
-                  [expanded]="true">
-                </ngx-json-viewer>
-              </div> -->
-            </div>
-
-            <fieldset class="title-fieldset">
-              <legend class="inner">Response</legend>
-            </fieldset>
-
-            <div style= "width:100%;height:180px">
-              <ace
-                class="app-ace-editor"
-                #editor
-                style="height: 80%;"
-                [config]="config"
-                [value]="responseSrc"
-                [theme]="'tomorrow'"
-                [mode]="'dot'">
-              </ace>
-            </div>
+                <div 
+                  *ngIf="choose === 'Header'"
+                  style="height: 160px">
+                  <d-data-table
+                    [dataSource]="dataHeaders"
+                    [scrollable]="true"
+                    [tableWidthConfig]="tableWidthConfigKeyValue"
+                  >
+                    <thead dTableHead [checkable]="true">
+                      <tr dTableRow>
+                        <th dHeadCell style="text-align: center;">Key</th>
+                        <th dHeadCell style="text-align: center;">Value</th>
+                      </tr>
+                    </thead>
+                    <tbody dTableBody>
+                      <ng-template let-rowItem="rowItem" let-rowIndex="rowIndex" let-nestedIndex="nestedIndex">
+                        <tr 
+                          class="trheader"
+                          dTableRow 
+                          [ngClass]="{ 'table-row-selected': rowItem.$checked }"
+                        >
+                          <td dTableCell class="devui-checkable-cell">
+                            <d-checkbox
+                              [ngModelOptions]="{ standalone: true }"
+                              (ngModelChange)="onRowCheckChange($event, rowIndex, nestedIndex, rowItem)"
+                              [ngModel]="rowItem.ischecked"
+                            >
+                            </d-checkbox>
+                          </td>
+                          <td 
+                            dTableCell
+                            [editable]="true"
+                            [editableTip]="editableTip"
+                            [(editing)]="rowItem['nameEdit']"
+                            [rowItem]="rowItem"
+                            [field]="'key'"
+                            [beforeEditEnd]="beforeEditEnd"
+                            style="text-align: center;"
+                          >
+                            <span *ngIf="!rowItem['nameEdit']">{{ rowItem?.key }}</span>
+                            <div *ngIf="rowItem['nameEdit']" class="edit-padding-fix">
+                              <input class="devui-form-control" name="key" [(ngModel)]="rowItem.key" [attr.maxlength]="100" [attr.minlength]="3" />
+                            </div>
+                          </td>
+                          <td 
+                            dTableCell
+                            [editable]="true"
+                            [editableTip]="editableTip"
+                            [(editing)]="rowItem['nameEdit2']"
+                            [rowItem]="rowItem"
+                            [field]="'value'"
+                            [beforeEditEnd]="beforeEditEnd"
+                            style="text-align: center;"
+                          >
+                            <span *ngIf="!rowItem['nameEdit2']">{{ rowItem?.value }}</span>
+                            <div *ngIf="rowItem['nameEdit2']" class="edit-padding-fix">
+                              <input class="devui-form-control" name="value" [(ngModel)]="rowItem.value" [attr.maxlength]="100" [attr.minlength]="3" />
+                            </div>
+                          </td>
+                          
+                          <i 
+                            class="icon icon-close"
+                            style="position:fixed; right:40px; cursor:pointer"
+                            (click)="handleDelete(rowIndex)"
+                          >
+                          </i>
+                        </tr>
+                      </ng-template>
+                    </tbody>
+                  </d-data-table>
+                </div>
+              </d-splitter-pane>
+              <d-splitter-pane style="overflow: hidden">
+                <fieldset class="title-fieldset">
+                  <legend class="inner" style="padding-bottom:6px">Response</legend>
+                </fieldset>
+                <ace
+                  class="app-ace-editor"
+                  #editor
+                  style="height: 70%;padding-bottom: 20px"
+                  [config]="config"
+                  [value]="responseSrc"
+                  [theme]="'tomorrow'"
+                  [mode]="'dot'">
+                </ace>
+              </d-splitter-pane>
+            </d-splitter>
           </div>
         </ng-template>
       </d-tab>
