--- a/src/app/components/management/management.component.less
+++ b/src/app/components/management/management.component.less
@@ -18,13 +18,8 @@
   font-size  : 16px;
   font-weight: 600;
   border     : none;
-  border-top : 1px solid #ADB0B8;
   margin-top : 20px;
-}
-
-.title-fieldset .inner {
-  margin : 0 auto;
-  padding: 0 0.25rem
+  padding    : 0;
 }
 
 .tool-bar-button {
