--- a/src/app/components/management/management.component.html
+++ b/src/app/components/management/management.component.html
@@ -268,6 +268,32 @@
           </div>
         </ng-template>
       </d-tab>
+      <d-tab id="tab2" [title]="'toolBar.base64' | translate" >
+        <ng-template dTabContent>
+          <div style="height: 240px; display:flex; justify-content: center; align-items:center">
+            <div style="width:50%; height:100%; display:inline-flex; margin:40px; border: 1px solid black;position: relative;
+              align-items: stretch;">
+              <div style="
+                display: table-cell;
+                width:100%;
+                vertical-align: middle;
+                text-align: center;
+                top:0;
+                left:0;
+                right:0;
+                bottom:0;
+                margin:auto;">
+                <input type="file" (change)="handleFileSelect($event)" />
+              </div>
+            </div>
+            <div style="width:50%; height:100%; display:inline-block; margin:40px; border: 1px solid black;position: relative;
+              align-items: stretch;">
+              <textarea dTextarea placeholder="base64" id="textArea" style="height:100%;" [(ngModel)]="base64textString"></textarea>
+            </div>
+
+          </div>
+        </ng-template>
+      </d-tab>
     </d-tabs>
   </d-layout>
 </ng-template>
